--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
       <div id="game">
       </div>
     </div>
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
