Fixed centering issues

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Memory Game Assignment for SpringBoard by Eric Broome (www.ericbroome.com)</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Londrina+Outline&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Solid:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Londrina+Shadow:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -12,8 +14,8 @@
       <div class="brand">&#8962;</div>
       <h1 id="home" class="home">Memory Game!</h1>
       <div id="timer" class="timer">00:00:00</div>
-      <div id="newGame" class="new-game-button">
-        <div id="new-game-button-label">New Game</div>
+      <div id="newGameButton">
+        <div id="newGameButtonLabel">New Game</div>
         <div id="gameOptionsDiv">
           <label for="emojis">Emojis?</label>
           <input type="checkbox" id = "emojis" name="emojis" checked>
@@ -24,9 +26,9 @@
             <option value="15">15</option>
             <option value="20">20</option>
           </select>
-          </div>
         </div>
       </div>
+    </div>
   <div id="content">
       <div id="splash">
         <div id="explain" class="explain">
